--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.0",
+    "@clerk/nextjs": "^6.15.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -23,7 +23,7 @@
     "apexcharts": "^3.49.1",
     "dayjs": "^1.11.11",
     "mongoose": "^8.4.0",
-    "next": "14.2.3",
+    "next": "^15.3.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-calendar-heatmap": "^1.9.0",
